package Enums;

public enum MedioDeContacto {
  TELEFONO,
  EMAIL,
  WHATSAPP
}
