package Enums;

public enum TipoCategoria {
  ALIMENTO,
  VESTIMENTA,
  MOBILIARIO

}
