package Enums;

public enum Unidad {
  KILOGRAMOS,
  GRAMOS,
  UNIDADES
}
