package Modelos;

public class Email implements MedioDeNotificacion {

  @Override
  public void EnviarMensaje(UsuarioDonante usuarioDonante, String mensaje) {
    //TODO
  }
}
