package Modelos;

public interface MedioDeNotificacion {
  public void EnviarMensaje(UsuarioDonante destinatario, String mensaje);
}
