package Modelos;

public class SMS implements MedioDeNotificacion {


  @Override
  public void EnviarMensaje(UsuarioDonante destinatario, String mensaje) {
    //TODO
  }
}
