package Modelos;

public class WhatsApp implements MedioDeNotificacion{

  @Override
  public void EnviarMensaje(UsuarioDonante destinatario, String mensaje) {
  ///TODO
  }
}
